Theme::currentThemeHasImage should not return true if parent themes match

BUG: 439847